left bar css fix

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -170,7 +170,7 @@
 <div class="row">
     {% block left_panel %}
         <div class="col-md-3 left">
-            <div class="panel panel-default">{% simple_menu "pages/menus/tree.html" %}</div>
+            <div class="panel panel-default panel-body">{% simple_menu "pages/menus/tree.html" %}</div>
         </div>
     {% endblock %}
 
