--- a/theme/templates/pages/menus/shop_tree.html
+++ b/theme/templates/pages/menus/shop_tree.html
@@ -19,7 +19,7 @@
               <div class="panel-heading">
                 <h3 class="panel-title">{% trans "Categories" %}</h3>
               </div>
-              <div class="panel-body">
+              <div>
                 {% if page.has_children_in_menu %}{% page_menu page %}{% endif %}
               </div>
           {% endif %}
