--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -84,19 +84,32 @@ footer .social a.email:hover {
   color: #ffffff;
 }
 
-.navlist-menu-level-0 {
-  /*padding: 10px;*/
+.nav-list:hover {
+  color: black;
 }
 
-.navlist-menu-level-1, .navlist-menu-level-2, .navlist-menu-level-3, .navlist-menu-level-4, .navlist-menu-level-5 {
-  /*padding: 5px 0px 5px 10px;*/
-  margin-left: 10px;
+ul.nav.nav-list.navlist-menu-level-1, ul.nav.nav-list.navlist-menu-level-2, ul.nav.nav-list.navlist-menu-level-3 {
+  margin: 0px -1px -1px -1px;
+  /*background-color: #f5f5f5;*/
+}
+ul.nav.nav-list.navlist-menu-level-1 > li, ul.nav.nav-list.navlist-menu-level-2 > li, ul.nav.nav-list.navlist-menu-level-3 > li {
+  border: 1px solid #ddd;
+  margin-top: -1px;
+}
+ul.nav.nav-list.navlist-menu-level-1 a {
+  padding-left: 15px;
 }
 ul.nav.nav-list.navlist-menu-level-2 {
-	background-color: #ecf6ff;
+	background-color: #f5f5f5;
+}
+ul.nav.nav-list.navlist-menu-level-2 a{
+  padding-left: 25px;
 }
 ul.nav.nav-list.navlist-menu-level-3 {
-	background-color: #e2f1ff;
+	background-color: #e8e8e8;
+}
+ul.nav.nav-list.navlist-menu-level-3 a {
+  padding-left: 35px;
 }
 .navlist-menu-level-1 a {
   color: #999999;
@@ -120,6 +133,10 @@ li.active-branch > ul {
 .dropdown-submenu > .dropdown-menu {
 	margin-top: -1px;
 	margin-left: 0px;
+}
+
+.dropdown-menu>.active>a, .dropdown-menu>.active>a:hover, .dropdown-menu>.active>a:focus {
+	background-color: #4fbfa8;
 }
 
 
