--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -1,5 +1,10 @@
 /** Your theme modifications here **/
 
+#blog-post img {
+	width: 100%;
+	height: auto;
+}
+
 #top ul.menu > li {
 	color: white;
 }
@@ -79,41 +84,29 @@ footer .social a.email:hover {
 	padding: 15px 30px 0px 30px;
 }
 
-.nav-list .active > a {
+
+#content .panel.sidebar-menu .active > a {
   background-color: #4fbfa8;
   color: #ffffff;
 }
 
-.nav-list:hover {
-  color: black;
-}
-
-ul.nav.nav-list.navlist-menu-level-1, ul.nav.nav-list.navlist-menu-level-2, ul.nav.nav-list.navlist-menu-level-3 {
-  margin: 0px -1px -1px -1px;
-  /*background-color: #f5f5f5;*/
-}
-ul.nav.nav-list.navlist-menu-level-1 > li, ul.nav.nav-list.navlist-menu-level-2 > li, ul.nav.nav-list.navlist-menu-level-3 > li {
-  border: 1px solid #ddd;
-  margin-top: -1px;
-}
 ul.nav.nav-list.navlist-menu-level-1 a {
   padding-left: 15px;
 }
 ul.nav.nav-list.navlist-menu-level-2 {
-	background-color: #f5f5f5;
+	/*background-color: #f5f5f5;*/
 }
 ul.nav.nav-list.navlist-menu-level-2 a{
   padding-left: 25px;
+  color: #959595;
 }
 ul.nav.nav-list.navlist-menu-level-3 {
-	background-color: #e8e8e8;
+	/*background-color: #e8e8e8;*/
 }
 ul.nav.nav-list.navlist-menu-level-3 a {
   padding-left: 35px;
 }
-.navlist-menu-level-1 a {
-  color: #999999;
-}
+
 
 li > ul {
 	display: none;
@@ -135,7 +128,7 @@ li.active-branch > ul {
 	margin-left: 0px;
 }
 
-.dropdown-menu>.active>a, .dropdown-menu>.active>a:hover, .dropdown-menu>.active>a:focus {
+.dropdown-menu>.active > a, .dropdown-menu>.active>a:hover, .dropdown-menu>.active>a:focus {
 	background-color: #4fbfa8;
 }
 
