--- a/theme/templates/blog/blog_post_list.html
+++ b/theme/templates/blog/blog_post_list.html
@@ -42,6 +42,7 @@
 {% endblock %}
 
 {% block left_panel %}
+<div id="content">
 {% blog_menu_categories as categories %}
 <div class="col-md-3">
 	{% if categories %}
@@ -66,6 +67,7 @@
 	<div class="box">
 		{% include "blog/includes/filter_panel.html" %}
 	</div>
+</div>
 </div>
 {% endblock %}
 
