--- a/theme/templates/generic/includes/disqus_comments.html
+++ b/theme/templates/generic/includes/disqus_comments.html
@@ -3,13 +3,18 @@
 <div id="disqus_thread"></div>
 {% disqus_sso_script %}
 <script>
-    var disqus_developer = '{{ settings.DEV_SERVER }}' == 'True';
-    var disqus_url = 'http{% if request.is_secure %}s{% endif %}://{{ request.META.HTTP_HOST }}{{ object_for_comments.get_absolute_url }}';
-    var disqus_title = '{{ object_for_comments|escapejs }}';
-    var disqus_identifier = '{% disqus_id_for object_for_comments %}';
-  (function() {
-   var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-   dsq.src = 'http{% if request.is_secure %}s{% endif %}://{{ settings.COMMENTS_DISQUS_SHORTNAME }}.disqus.com/embed.js';
-   (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-  })();
+
+var disqus_config = function () {
+this.page.url = 'http{% if request.is_secure %}s{% endif %}://{{ request.META.HTTP_HOST }}{{ object_for_comments.get_absolute_url }}';  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = '{% disqus_id_for object_for_comments %}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = '//handmaker-top.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
 </script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                                
