--- a/theme/templates/pages/category.html
+++ b/theme/templates/pages/category.html
@@ -1,25 +1,35 @@
 {% extends "pages/page.html" %}
 
-{% load mezzanine_tags shop_tags i18n theme_tags %}
+{% load mezzanine_tags shop_tags i18n theme_tags pages_tags  %}
 {% block body_id %}category{% endblock %}
 
 {% block title %}
 {% endblock %}
 
+
 {% block left_panel %}
-{# {% shop_menu_categories as categories %} #}
+<div id="content">
 <div class="col-md-3">
     {# {% if categories %} #}
         <div class="panel panel-default sidebar-menu">
-            <!-- <div class="panel-heading">
+            <div class="panel-heading">
                 <h3 class="panel-title">{% trans "Categories" %}</h3>
             </div>
-            <div class="panel-body"> -->
+            <div class="panel-body">
                 {% shop_menu "pages/menus/shop_tree.html" %}
-            <!-- </div> -->
+            </div>
         </div>
-    {# {% endif %} #}
 </div>
+</div>
+{% endblock %}
+
+
+{% block breadcrumb_menu %}
+<ul class="breadcrumb">
+    {% spaceless %}
+        {% page_breadcrumb_menu "pages/menus/breadcrumb.html" %}
+    {% endspaceless %}
+</ul>
 {% endblock %}
 
 
