--- a/theme/templates/generic/includes/disqus_comments.html
+++ b/theme/templates/generic/includes/disqus_comments.html
@@ -1,12 +1,12 @@
 {% load disqus_tags %}
 
 <div id="disqus_thread"></div>
-{% disqus_sso_script %}
 <script>
-
 var disqus_config = function () {
-this.page.url = 'http{% if request.is_secure %}s{% endif %}://{{ request.META.HTTP_HOST }}{{ object_for_comments.get_absolute_url }}';  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = '{% disqus_id_for object_for_comments %}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+	this.page.url = 'http{% if request.is_secure %}s{% endif %}://{{ request.META.HTTP_HOST }}{{ object_for_comments.get_absolute_url }}';  // Replace PAGE_URL with your page's canonical URL variable
+	this.page.identifier = '{% disqus_id_for object_for_comments %}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+	this.page.remote_auth_s3 = '{{ sso_data }}';
+	this.page.api_key = '{{ public_key }}';
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
