--- a/theme/templates/generic/includes/disqus_comments.html
+++ b/theme/templates/generic/includes/disqus_comments.html
@@ -3,12 +3,13 @@
 
 <div id="disqus_thread"></div>
 <script>
+
 var disqus_config = function () {
-	this.page.remote_auth_s3 = '{{ sso_data }}';
-	this.page.api_key = '{{ public_key }}';
+this.page.url = 'http{% if request.is_secure %}s{% endif %}://{{ request.META.HTTP_HOST }}{{ object_for_comments.get_absolute_url }}';
+this.page.identifier = '{% disqus_id_for object_for_comments %}'; 
 };
 
-(function() { // DON'T EDIT BELOW THIS LINE
+(function() { 
 var d = document, s = d.createElement('script');
 s.src = '//handmaker-top.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
