--- a/theme/templates/blog/blog_post_detail.html
+++ b/theme/templates/blog/blog_post_detail.html
@@ -30,6 +30,7 @@
 <div id="content">
 <div class="col-md-9" id="blog-post">
 <div class="box">
+<div id="blog-post-content">
 <h1>{{ blog_post.title }}</h1>
 	
 	{% block blog_post_detail_postedby %}
@@ -73,13 +74,13 @@
 	{% endspaceless %}
 	{% endif %}
 	{% endblock %}
-
+</div>
 	{% block blog_post_detail_rating %}
-	<div class="panel panel-default rating">
-		<div class="panel-body">
-		{% rating_for blog_post %}
-		</div>
+<!-- 	<div class="panel panel-default rating">
+	<div class="panel-body">
+	{% rating_for blog_post %}
 	</div>
+</div> -->
 	{% endblock %}
 
 	{% block blog_post_detail_sharebuttons %}
@@ -113,10 +114,10 @@
 		<h4>
 			{% if blog_post.allow_comments %}
 				{% if settings.COMMENTS_DISQUS_SHORTNAME %}
-					<a href="{{ blog_post.get_absolute_url }}#disqus_thread"
+					<!-- <a href="{{ blog_post.get_absolute_url }}#disqus_thread"
 						data-disqus-identifier="{% disqus_id_for blog_post %}">{% spaceless %}
 						{% trans "Comments" %}
-					{% endspaceless %}</a>
+					{% endspaceless %}</a> -->
 				{% else %}<a href="#comments">{% spaceless %}
 					{% blocktrans count comments_count=blog_post.comments_count %}{{ comments_count }} comment{% plural %}{{ comments_count }} comments{% endblocktrans %}
 					{% endspaceless %}</a>
