--- a/theme/templates/blog/blog_post_list.html
+++ b/theme/templates/blog/blog_post_list.html
@@ -15,31 +15,6 @@
 {{ page.description }}
 {% endmetablock %}{% endblock %}
 
-{% block title %}
-<!-- {% if page %}
-{% editable page.title %}{{ page.title }}{% endeditable %}
-{% else %}
-{% trans "Blog" %}
-{% endif %} -->
-{% endblock %}
-
-{% block breadcrumb_menu %}
-{{ block.super }}
-<!-- {% if tag or category or year or month or author %}
-<li>{% spaceless %}
-{% if tag %}
-	{% trans "Tag:" %} {{ tag }}
-{% else %}{% if category %}
-	{% trans "Category:" %} {{ category }}
-{% else %}{% if year or month %}
-	{% if month %}{{ month }}, {% endif %}{{ year }}
-{% else %}{% if author %}
-	{% trans "Author:" %} {{ author.get_full_name|default:author.username }}
-{% endif %}{% endif %}{% endif %}{% endif %}
-{% endspaceless %}
-</li>
-{% endif %} -->
-{% endblock %}
 
 {% block left_panel %}
 <div id="content">
@@ -133,7 +108,7 @@
 	<p class="date-comments">
 	{% if blog_post.allow_comments %}
 		{% if settings.COMMENTS_DISQUS_SHORTNAME %}
-		<a href="{{ blog_post.get_absolute_url }}#disqus_thread"
+		<a href="{{ blog_post.get_absolute_url }}#hypercomments_widget"
 			data-disqus-identifier="{% disqus_id_for blog_post %}">
 			{% trans "Comments" %}
 		</a>
@@ -157,8 +132,12 @@
 	{% endif %}
 
 	{% block blog_post_list_post_content %}
-	{% editable blog_post.content %}
-	{{ blog_post.description_from_content|safe }}
+	{% editable blog_post.preview_content %}
+	{% if blog_post.preview_content %}
+		{{ blog_post.preview_content|safe }}
+	{% else %}
+		{{ blog_post.description_from_content|safe }}
+	{% endif %}
 	{% endeditable %}
 	{% endblock %}
 
