--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -10,23 +10,18 @@
 {% block left_panel %} {% endblock %} 
 
 {% block main %}
-<div class="col-sm-12">
-	<div id="main-slider">
-		<div class="item">
-			<img alt="" class="img-responsive" src="{% static 'img/main-slider1.jpg' %}">
-		</div>
-		<div class="item">
-			<img alt="" class="img-responsive" src="{% static 'img/main-slider2.jpg' %}">
-		</div>
-		<div class="item">
-			<img alt="" class="img-responsive" src="{% static 'img/main-slider3.jpg' %}">
-		</div>
-		<div class="item">
-			<img alt="" class="img-responsive" src="{% static 'img/main-slider4.jpg' %}">
+{% get_slideshow as images %}
+	{% if images %}
+	<div class="col-sm-12">
+		<div id="main-slider">
+		{% for image in images %}
+			<div class="item">
+				<img src="{{ MEDIA_URL }}/uploads/slideshow/{{ image }}" alt="" class="img-responsive">	
+			</div>
+		{% endfor %}
 		</div>
 	</div>
-</div>
-
+	{% endif %}
 <div id="advantages">
                 <div class="container">
                     <div class="same-height-row">
