--- a/theme/templates/admin/pages/page/change_list.html
+++ b/theme/templates/admin/pages/page/change_list.html
@@ -10,7 +10,7 @@
 .grappelli-delete:hover {background:url('{% static settings.MEZZANINE_ADMIN_PREFIX|add:"img/icons/icon-inline_item_tools-deletelink-hover.png" %}');}
 </style>
 
-<script src="{% static "admin/js/page_tree.js" %}"></script>
+<script src="{% static "admin/js/mezz/page_tree.js" %}"></script>
 {% endblock %}
 
 
