--- a/theme/templates/admin/change_form.html
+++ b/theme/templates/admin/change_form.html
@@ -20,28 +20,6 @@
 
 {% if not is_popup %}
   {% block breadcrumbs %}
-    <ol class="breadcrumb">
-      <li class="home">
-        <a href="{% url 'admin:index' %}" title="{% trans 'Home' %}"><span class="glyphicon glyphicon-home"></span></a>
-      </li>
-      <li>
-        <a href="{% url 'admin:app_list' app_label=opts.app_label %}">
-          {{ opts.app_config.verbose_name }}
-        </a>
-      </li>
-      <li>
-        {% if has_change_permission %}
-          <a href="{% url opts|admin_urlname:'changelist' %}">
-            {{ opts.verbose_name_plural|capfirst }}
-          </a>
-        {% else  %}
-            {{ opts.verbose_name_plural|capfirst }}
-        {% endif %}
-      </li>
-      <li class="active">
-        {% if add %}{% trans 'Add' %} {{ opts.verbose_name }}{% else %}{{ original|truncatewords:"18" }}{% endif %}
-      </li>
-    </ol>
   {% endblock %}
 {% endif %}
 
@@ -64,9 +42,11 @@
           </a>
           <div class="panel-body">
             {% if errors %}
-              <p class="errornote">
-              {% if errors|length == 1 %}{% trans "Please correct the error below." %}{% else %}{% trans "Please correct the errors below." %}{% endif %}
-              </p>
+            <div class="alert alert-dismissable alert-danger">
+			{% if errors|length == 1 %}{% trans "Please correct the error below." %}{% else %}{% trans "Please correct the errors below." %}{% endif %}
+				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+			</div>
+
               {{ adminform.form.non_field_errors }}
             {% endif %}
 
