--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -11,7 +11,7 @@
 <meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
 <meta name="description" content="{% block meta_description %}{% endblock %}">
 <title>{% block meta_title %}{% endblock %}{% if settings.SITE_TITLE %} | {{ settings.SITE_TITLE }}{% endif %}</title>
-<link rel="shortcut icon" href="{% static "img/favicon.ico" %}">
+<link rel="shortcut icon" href="{% static "images/logo/logo.png" %}">
 
 {% ifinstalled mezzanine.blog %}
 <link rel="alternate" type="application/rss+xml" title="RSS" href="{% url "blog_post_feed" "rss" %}">
@@ -299,7 +299,7 @@
 {% endcompress %}
 
 {% block footer_js %}
-{% include "includes/footer_scripts.html" %}
+{# {% include "includes/footer_scripts.html" %} #}
 {% endblock %}
 
 
