--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -48,18 +48,16 @@
         <!-- Top Bar Menu -->
         <div class="ten columns">
             <ul class="top-bar-menu">
-                <li><i class="fa fa-phone"></i> (564) 123 4567</li>
-                <li><i class="fa fa-envelope"></i> <a href="/">mail@example.com</a></li>
+                <li><i class="fa fa-envelope"></i> <a href="mailto:info@handmaker.top">info@handmaker.top</a></li>
             </ul>
         </div>
         <!-- Social Icons -->
         <div class="six columns">
             <ul class="social-icons">
-                <li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-                <li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
-                <li><a class="dribbble" href="#"><i class="icon-dribbble"></i></a></li>
-                <li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
-                <li><a class="pinterest" href="#"><i class="icon-pinterest"></i></a></li>
+                <li>
+                	<a class="facebook" href="https://www.facebook.com/groups/803193513100186?ref=bookmarks"><i class="icon-facebook"></i></a>
+                </li>
+                <li><a class="instagram" href="https://www.instagram.com/handmaker.top/"><i class="icon-instagram"></i></a></li>
             </ul>
         </div>
 
