--- a/theme/templates/admin/edit_inline/stacked.html
+++ b/theme/templates/admin/edit_inline/stacked.html
@@ -1,19 +1,25 @@
 {% load i18n static %}
 <div class="inline-group" id="{{ inline_admin_formset.formset.prefix }}-group">
+<div class="" data-widget='{"draggable": "false"}'>
+		<div class="panel-heading">
   <h2 class="h4">{{ inline_admin_formset.opts.verbose_name_plural|capfirst }}</h2>
+  		</div>
+  		<div class="">
   {{ inline_admin_formset.formset.management_form }}
   {{ inline_admin_formset.formset.non_form_errors }}
 
   {% for inline_admin_form in inline_admin_formset %}
     <div class="inline-related{% if inline_admin_form.original or inline_admin_form.show_url %} has_original{% endif %}{% if forloop.last %} empty-form last-related{% endif %}" id="{{ inline_admin_formset.formset.prefix }}-{% if not forloop.last %}{{ forloop.counter0 }}{% else %}empty{% endif %}">
-      <h3 class="h5">
-        <div class="btn-group pull-right">
+    <div class="panel panel-midnightblue" data-widget='{"draggable": "false", "collapsed" : "true"}'>
+		<div class="panel-heading">
+      <h2>
+        <div>
           {% if inline_admin_formset.formset.can_delete and inline_admin_form.original %}
-            <span class="delete btn btn-default">
+          <div class="checkbox checkbox-success">
               <label for="{{ inline_admin_form.deletion_field.field.id_for_label }}">
                 {{ inline_admin_form.deletion_field.field }} {{ inline_admin_form.deletion_field.field.label }}
               </label>
-            </span>
+            </div>
           {% endif %}
           {% if inline_admin_form.show_url %}
             <a class="btn btn-default" href="{{ inline_admin_form.absolute_url }}">
@@ -21,8 +27,13 @@
             </a>
           {% endif %}
         </div>
-        <b>{{ inline_admin_formset.opts.verbose_name|capfirst }}:</b>&nbsp;<span class="inline_label">{% if inline_admin_form.original %}{{ inline_admin_form.original }}{% else %}#{{ forloop.counter }}{% endif %}</span>
+        <div class="btn-group">
+        {{ inline_admin_formset.opts.verbose_name|capfirst }}:&nbsp;<span class="inline_label">{% if inline_admin_form.original %}{{ inline_admin_form.original }}{% else %}#{{ forloop.counter }}{% endif %}</span>
+        </div>
       </h3>
+      <div class="panel-ctrls" data-actions-container="" data-action-collapse='{"target": ".panel-body, .panel-footer"}'></div>
+      </div>
+      <div class="panel-body">
       {% if inline_admin_form.form.non_field_errors %}{{ inline_admin_form.form.non_field_errors }}{% endif %}
       {% for fieldset in inline_admin_form %}
         {% include "admin/includes/fieldset.html" %}
@@ -30,9 +41,11 @@
       {% if inline_admin_form.needs_explicit_pk_field %}{{ inline_admin_form.pk_field.field }}{% endif %}
       {{ inline_admin_form.fk_field.field }}
     </div>
+    </div>
   {% endfor %}
 </div>
-
+</div>
+</div>
 <script type="text/javascript">
 (function($) {
   $("#{{ inline_admin_formset.formset.prefix }}-group .inline-related").stackedFormset({
