--- a/theme/templates/admin/change_form.html
+++ b/theme/templates/admin/change_form.html
@@ -109,6 +109,8 @@ $('.delete :checkbox').change(function() {
 $('.field-default :checkbox').change(function() {  
     $('.field-default :checkbox').not(this).prop('checked', false);  
 });
+
+$('.fb_show').append("Добавить изображение");
 })(jQuery);
   </script>
 {% endblock extrascript %}
