--- a/theme/templates/admin/shop/product/change_form.html
+++ b/theme/templates/admin/shop/product/change_form.html
@@ -3,8 +3,10 @@
 
 {% block after_related_objects %}
 {% if not change %}
-<p class="help variations-help" style="display:none; margin:5px 15px;">
-{% trans "Select all of the required variation options and then click 'Save and continue editing' below. You'll then be able to edit the price and other attributes for each variation individually." %}
+
+<p class="help variations-help">
+<br>
+Выберите все необходимые варианты и нажмите "Сохранить и продолжить редактирование". После чего вы сможете изменить цену для каждого товара отдельно.
 </p>
 {% endif %}
 {% endblock %}
