--- a/theme/templates/admin/login.html
+++ b/theme/templates/admin/login.html
@@ -8,6 +8,14 @@
     <a href="{% url 'admin:index' %}" class="login-logo"><img src="{% static 'images/logo/login_handmaker.png' %}"></a>
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
+        {% if messages %}
+            <div class="alert alert-dismissable alert-success">
+            {% for message in messages %}
+                <i class="fa fa-check"></i>&nbsp; {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+            {% endfor %}
+            </div>
+        {% endif %}
             <div class="panel panel-default">
                 <div class="panel-body">
                     <form action="{{ app_path }}" class="form-horizontal" id="validate-form" method="post">
@@ -53,10 +61,12 @@
                     <div class="clearfix">
                         <a href="{% url "password_reset" %}" class="btn btn-default pull-left">{% trans "Forgot password?" %}</a>
                         <input type="submit" class="btn btn-primary btn-raised pull-right" value="{% trans 'Log in' %}" />
+
                     </div>
                 </div>
                 </form>
             </div>
+            <a href="{% url "signup" %}" class="ml-xl">Зарегистрироваться</a>
         </div>
     </div>
 </div>
