--- a/theme/templates/filebrowser/index.html
+++ b/theme/templates/filebrowser/index.html
@@ -8,6 +8,12 @@
     {{ block.super }}
     <link rel="stylesheet" type="text/css" href="{% static "grappelli/css/changelist.css" %}" />
     <link rel="stylesheet" type="text/css" href="{{ settings_var.URL_FILEBROWSER_MEDIA }}css/filebrowser.css" />
+    <style>
+    	table .fb_selectlink:link, table .fb_selectlink:visited { 
+    		background-image: url('../../../../static/icons/filebrowser_icon_select.png'); }
+		table .fb_selectlink:hover, table .fb_selectlink:active { 
+			background-image: url('../../../../static/icons/filebrowser_icon_select_hover.png'); }
+    </style>
 {% endblock %}
 
 <!-- JAVASCRIPTS -->
@@ -83,9 +89,7 @@
         </div>
         <div id="changelist-filter">
             {% include "filebrowser/include/toolbar.html" %}
-            <div class="module filter">
-                {% include "filebrowser/include/filter.html" %}
-            </div>
+            
         </div>
     </div>
 </div>
