--- a/theme/templates/filebrowser/upload.html
+++ b/theme/templates/filebrowser/upload.html
@@ -1,7 +1,7 @@
 {% extends "admin/file_browse.html" %}
 
 <!-- LOADING -->
-{% load i18n l10n static fb_tags mezzanine_tags %}
+{% load i18n l10n static fb_tags mezzanine_tags theme_tags %}
 
 <!-- STYLESHEETS -->
 {% block stylesheets %}
@@ -41,11 +41,11 @@
         data-check-url="{% url 'fb_check' %}"
         data-replace-message="{% trans 'Do you want to replace the file' %}"
         data-redirect-when-done="{% url 'fb_browse' %}{% query_string '' 'p' %}"
-        data-allowed-extensions="{% allowed_extensions_list %}"
+        data-allowed-extensions="{% allowed_theme_list %}"
         data-size-limit="{{ settings_var.MAX_UPLOAD_SIZE|unlocalize }}"
-        data-server-error="{% trans 'There was a server error when uploading the file.' %}"
-        data-size-error="{% trans 'The file size is larger than the limit.' %}"
-        data-extension-error="{% trans 'The file extension is not allowed.' %}">
+        data-server-error="Во время загрузки файла произошла ошибка"
+        data-size-error="Превышен лимит файла"
+        data-extension-error="Данный формат запрещен">
 
     <div>
         <fieldset class="module aligned">
@@ -53,7 +53,7 @@
             <div>
                 <div class="file-input-wrapper">
                     <label class="button hide-in-progress hide-done">
-                        {% trans 'Browse' %}
+                        Выбрать файл
                         <input name="Filedata" type="file" />
                     </label>
 
@@ -79,14 +79,6 @@
         <fieldset class="module aligned collapse-closed">
         <h2>{% trans "Help" %}</h2>
         <div class="form-row" >
-            {% for extension in settings_var.EXTENSIONS.items %}
-            {% ifnotequal extension.0 'Folder' %}
-            <label class="required">{% if forloop.first %}{% trans "Allowed" %}:{% else %}&nbsp;{% endif %}</label>
-            <p>{{ extension.0|safe }} ({{ extension.1|join:", "|safe }})</p>
-            {% endifnotequal %}
-            {% endfor %}
-        </div>
-        <div class="form-row" >
             <label class="required">{% trans "Max. Filesize" %}:</label>
             <p>{{ settings_var.MAX_UPLOAD_SIZE|filesizeformat }}</p>
         </div>
@@ -99,7 +91,7 @@
         </div>
         {% endif %}
         </fieldset>
-        <p>{% trans "Once you've selected all the files you want to upload, click the upload button in the bottom right corner to begin the upload process." %}</p>
+        <p>Для того, чтобы загрузить файлы, нажмите на кнопку "Загрузить", расположенную ниже.</p>
 
         <div class="submit-row">
             <p class="deletelink-box">
