--- a/theme/templates/blog/blog_post_detail.html
+++ b/theme/templates/blog/blog_post_detail.html
@@ -28,7 +28,7 @@
 		{% block blog_post_detail_featured_image %}
 			{% if settings.BLOG_USE_FEATURED_IMAGE and blog_post.featured_image %}
 			<figure class="post-img">
-				<a href="{{ MEDIA_URL }}{% thumbnail blog_post.featured_image 0 0 %}" class="mfp-image" title="First Image Title">
+				<a href="{{ MEDIA_URL }}{% thumbnail blog_post.featured_image 0 0 %}" class="mfp-image" title="{{ blog_post.title|title }}">
 					<img src="{{ MEDIA_URL }}{% thumbnail blog_post.featured_image 900 0 %}" />
 					<div class="hover-icon"></div>
 				</a>
