--- a/theme/templates/admin/base.html
+++ b/theme/templates/admin/base.html
@@ -103,12 +103,13 @@
 					<div class="container-fluid">
 						<div data-widget-group="group1" class="ui-sortable">
 						{% if messages %}
-					    <div class="alert alert-dismissable alert-success">
+					    
 					    	{% for message in messages %}
+					    	<div class="alert alert-dismissable alert-success mt">
 					    		<i class="fa fa-check"></i>&nbsp; {{ message }}
 					    		<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+					    	</div>
 					    	{% endfor %}
-					    </div>
 					    {% endif %}
 						{% block content %}
 						{% endblock %}
